# dotfiles

./: .bashrc  .gitconfig  .gitignore  .tmux.conf  .vimrc  .vimrc!  .xprofile  .xprofile.fish  .zshrc  GlobalCLAUDE.md  Vast.md  batch_4.md  context-hetzner-stack-bootstrap.md  context-re-bootstrap-hetzner.md  context-secu-nvr-per-channel.md  context-ts-restart-context.md  disko_jim.nix  flake.nix  hosting-next-steps.md  hosting-research.md  index.html  install  john.zsh-theme  kubeworker  longhorn-recovery.md  mac_packages.md  plan_summary.md  reboot.txt  research-autoresearch-vs-goal.md  update
.claude/: settings.json
.config/: aws-bootstrap.bash  binds.txt  get_mullvad.fish  get_sunset.fish  juush.bash  nas-share.sh  pacman.conf  paru.conf  routine.fish  starship.toml  startup-secu.fish  startup.fish  sunset_cron.fish  vast-bootstrap.bash  vast-render-metrics.py
autoclicker/: Cargo.toml  flake.nix
awsctx/: Cargo.toml  default.nix  flake.nix  shell.nix
awsctx/src/: main.rs
cad/: r740-standoffs.scad
docs/: frigate-genai.md  genai-child-workflow-plan.md  genai-module-split-plan.md  genai-spawn-join-plan.md  index.html  linkerd-federation.md  network-topology.md  spire.md
eww/: eww.scss  eww.yuck
fish_functions/: agent-cron-cleanup.linux.fish  agent-cron-list.linux.fish  agent-cron-stop.linux.fish  argocd.fish  bigjuush.fish  deepseek-costs.fish  (+24 more)
nixos/provision/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  clusters.yaml  deploy.py  deploy_all.py  post_deploy.py  pyproject.toml  spec.py
nixos/provision/resources/: common.py  digitalocean.py  hetzner.py
(+486 files in other folders)
