[package]
name = "awsctx"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
nom = "7.1.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_ini = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
