[project]
name = "k3s-multi-cloud"
version = "1.0.0"
description = "Pulumi-based multi-cloud k3s provisioner"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0",
    "pulumi-hcloud>=1.0",
    "pulumi-digitalocean>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "paramiko>=3.0",
]

[tool.pulumi]
main = "__main__.py"
